--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,74 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Work Sans', sans-serif;
+}
+
+/* common styles here  */
+.flex {
+    display: flex;
+    align-items: center;
+}
+
+/* nav styles here  */
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+}
+
+.nav-logo-container img {
+    width: 60px;
+}
+
+.nav-logo-container h2 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #0B0223;
+    padding-left: 15px;
+}
+
+.primary-color {
+    color: #FF42A5;
+}
+
+.menu-container li {
+    list-style: none;
+
+}
+
+.menu-container a {
+    color: #3C354F;
+    font-weight: 500;
+    text-decoration: none;
+    padding-right: 20px;
+}
+
+.follow-section p {
+    color: #3C354F;
+    font-weight: 500;
+    background-color: #0b02231a;
+    border-radius: 8px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.fa-youtube {
+    color: #F61C0D;
+    font-size: 1.5rem;
+    padding-left: 15px;
+}
+
+.fa-tiktok {
+    color: #000000;
+    font-size: 1.5rem;
 }
