--- a/styles/style.css
+++ b/styles/style.css
@@ -207,3 +207,32 @@ body {
     color: #534C64;
     padding: 10px 0px;
 }
+/* games category styles here  */
+.games-category{
+    width: 80%;
+    margin: 150px auto 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+.category-container{
+    gap: 10px;
+    padding: 5px;
+}
+.category-container:hover {
+    border: 1px solid #FF42A5;
+    border-radius: 30px;
+}
+.category-container:hover .category-name{
+    color: #FF42A5;
+}
+.category-container img{
+    width: 40px;
+}
+.category-name{
+    font-size: 1rem;
+    font-weight: 600;
+    color: #0B0223;
+}
