--- a/styles/style.css
+++ b/styles/style.css
@@ -263,7 +263,7 @@ footer{
     justify-content: center;
     gap: 3%;
 }
-.quick-links li, .fa-brands{
+.quick-links li,.social-links .fa-brands{
     padding: 15px 0px;
 }
 .quick-links li a{
