footer responsive finished

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -33,4 +33,17 @@
     .category-container{
         flex-basis: 30%;
     }
+    footer{
+        padding: 100px 10%;
+    }
+    .quick-links ul,.policy ul{
+        flex-wrap: wrap;
+    }
+    .quick-links li{
+        flex-basis: 30%;
+    }
+    .policy ul{
+        /* flex-basis: 40%; */
+        gap: 10%;
+    }
 }
