--- a/styles/style.css
+++ b/styles/style.css
@@ -259,10 +259,11 @@ footer{
     padding-left: 15px;
 }
 
-.quick-links ul{
+.quick-links ul, .policy ul{
     justify-content: center;
     gap: 3%;
 }
+.policy li,
 .quick-links li,.social-links .fa-brands{
     padding: 15px 0px;
 }
@@ -276,9 +277,13 @@ footer{
     color: white;
     margin: 10px;
 }
-.policy a, .footer-description{
+.policy li a{
+    text-decoration: none;
     font-weight: 500;
     color: rgba(255, 255, 255, 0.60);
-    text-decoration: none;
+}
+ .footer-description{
+    font-weight: 500;
+    color: rgba(255, 255, 255, 0.60);
     padding: 15px 15px;
 }
