--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -34,19 +34,12 @@
         text-align: center;
     }
     .play-img-container{
-        width: 100%;
+        width: 80%;
     }
-    .play-img-container>img{
-        width: 70%;
+    .main-img{
+        width: 90%;
     }
-    .secondary-img{
-        position: absolute;
-        bottom: -15%;
-        right: -50%;
-    }
-    .secondary-img img{
-        width: 40%;
-    }
+
     .videos-card {
         width: 100%;
         text-align: center;
