--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -44,9 +44,18 @@
         width: 100%;
         text-align: center;
     }
-
+    .games-category{
+        gap: 15px;
+    }
     .category-container{
-        flex-basis: 30%;
+        gap: 5px;
+        width: 30%;
+    }
+    .category-container img{
+        width: 30px;
+    }
+    .category-name{
+        font-size: 0.7rem;
     }
     footer{
         padding: 100px 10%;
