--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,4 +1,5 @@
 @media screen and (max-width:576px) {
+
     .videos-card-container,
     .menu-container ul,
     .menu-container,
@@ -13,30 +14,38 @@
         padding: 20px 0px;
         background-image: none;
     }
-    .banner-content{
+
+    .banner-content {
         background-image: url("../assets/images/Group\ 14.png");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
     }
+
     .banner-img,
     .banner-content {
         width: 70%;
         margin: 0 auto;
         padding: 0px;
     }
-    .play-games{
+    .banner-content h1{
+        font-size: 4rem;
+    }
+    .play-games {
         flex-direction: column-reverse;
         gap: 20px;
     }
-    .play-games-content{
+
+    .play-games-content {
         width: 100%;
         text-align: center;
     }
-    .play-img-container{
+
+    .play-img-container {
         width: 80%;
     }
-    .main-img{
+
+    .main-img {
         width: 90%;
     }
 
@@ -44,30 +53,52 @@
         width: 100%;
         text-align: center;
     }
-    .games-category{
+
+    .games-category {
         gap: 15px;
     }
-    .category-container{
+
+    .category-container {
         gap: 5px;
         width: 30%;
     }
-    .category-container img{
+
+    .category-container img {
         width: 30px;
     }
-    .category-name{
+
+    .category-name {
         font-size: 0.7rem;
     }
-    footer{
+
+    footer {
         padding: 100px 10%;
     }
-    .quick-links ul,.policy ul{
+
+    .quick-links ul,
+    .policy ul {
         flex-wrap: wrap;
     }
-    .quick-links li{
+
+    .quick-links li {
         flex-basis: 30%;
     }
-    .policy ul{
-        /* flex-basis: 40%; */
+
+    .policy ul {
         gap: 10%;
+    }
+}
+
+/* responsive style for medium screen devices */
+@media screen and (min-width:577px) and (max-width:960px) {
+    .nav-container {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .videos-card{
+        height: 250px;
+    }
+    .play-games{
+        gap: 50px;
     }
 }
